# mini-harness-bench

./: .gitignore  IMPL.md  SPEC.md  pyproject.toml
config/: pricing.yaml  tiers.yaml
mhb/: cli.py  harness.py  scoring.py
mhb/agents/: base.py  claude_code.py  codex.py  oracle.py  subprocess_util.py  tau.py
mhb/evaluation/: parser.py  runner.py
mhb/reporting/: compare.py  display.py  results.py  trajectory.py
mhb/tasks/: loader.py  workspace.py
tasks/add-cli-subcommand/: task.yaml
tasks/api-migration/: task.yaml
tasks/config-aware-bugfix/: setup.sh  task.yaml
tasks/config-drift-detection/: task.yaml
tasks/contradictory-spec/: task.yaml
tasks/csv-to-parquet/: setup.sh  task.yaml
tasks/data-pipeline-validation/: task.yaml
tasks/dead-code-trap/: task.yaml
tasks/debug-from-structured-logs/: task.yaml
tasks/diagnose-perf-regression/: setup.sh  task.yaml
tasks/dockerfile-to-shell/: setup.sh  task.yaml
tasks/extract-class-refactor/: task.yaml
tasks/fix-broken-serialization/: task.yaml
tasks/fix-circular-import/: task.yaml
tasks/fix-git/: setup.sh  task.yaml
tasks/fix-off-by-one/: task.yaml
tasks/fix-pandas-version/: setup.sh  task.yaml
tasks/fix-the-fix/: setup.sh  task.yaml
tasks/git-multibranch/: setup.sh  task.yaml
tasks/heterogeneous-dates/: task.yaml
tasks/implement-from-tests/: task.yaml
tasks/jq-data-processing/: task.yaml
tasks/log-parser/: task.yaml
tasks/makefile-fix/: task.yaml
tasks/new-encrypt-command/: task.yaml
tests/: test_loader.py  test_parser.py  test_results.py  test_scoring.py  test_workspace.py
(+177 files in other folders)
